FInalização da exibição
- Exibição de voos praticamente pronta;
- Aperfeiçoamento do código;
- Melhoria visual da tabela.

--- a/AirportProject/src/main/java/Principal/Principal.form
+++ b/AirportProject/src/main/java/Principal/Principal.form
@@ -396,6 +396,7 @@
                             <Column editable="false" title="Cidade de Destino" type="java.lang.String"/>
                           </Table>
                         </Property>
+                        <Property name="dragEnabled" type="boolean" value="true"/>
                       </Properties>
                     </Component>
                   </SubComponents>
